...
                            </imageView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yGO-fj-26X">
                                <rect key="frame" x="42" y="328.66666666666669" width="309" height="194.66666666666669"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xgJ-Tp-Wca">
                                        <rect key="frame" x="8" y="8" width="293" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailField">
                                            <accessibilityTraits key="traits" staticText="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="emailField:" destination="AKN-bd-jEk" eventType="editingDidEnd" id="cWg-q5-GDB"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LFH-u8-iWh">
                                        <rect key="frame" x="8" y="80.333333333333258" width="293" height="34"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="passField">
                                            <accessibilityTraits key="traits" staticText="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="passwordField:" destination="AKN-bd-jEk" eventType="editingDidEnd" id="ugh-cJ-6c2"/>
                                        </connections>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tjk-kL-qMx">
                                        <rect key="frame" x="8" y="122.66666666666663" width="293" height="42"/>
                                        <color key="backgroundColor" red="0.93903724870000005" green="0.93730549379999994" blue="0.34022859950000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <accessibility key="accessibilityConfiguration" identifier="loginBtn"/>
                                        <color key="tintColor" systemColor="labelColor"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Login">
                                            <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="24"/>
                                        </buttonConfiguration>
                                        <connections>
...
                            <barButtonItem systemItem="add" id="O5z-Rh-PIq" userLabel="AddNewUser">
                                <color key="tintColor" systemColor="systemGreenColor"/>
                                <connections>
                                    <segue destination="5XP-Re-7le" kind="presentation" identifier="AddUserSegue" modalPresentationStyle="fullScreen" id="juu-Gy-Xp4"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Profile" image="brain.head.profile" catalog="system" id="Hkr-7T-a3p">
                                <color key="tintColor" systemColor="systemGreenColor"/>
                                <connections>
                                    <segue destination="Y9k-SE-Va9" kind="presentation" identifier="UserProfileSegue" modalPresentationStyle="fullScreen" id="LqC-2S-ZlJ"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
...
