...
    private weak var task: URLSessionTask?
    
    
    @IBAction func loginUser(_ sender: Any) {
        if emailField.text!.isEmpty || passwordField.text!.isEmpty
        {
            showAlert(title: "Try Again", message: "Email and password should not be empty")
            return
        }
        if emailField.text=="test" && passwordField.text == "test"
        {
            self.performSegue(withIdentifier: "LoginSegue", sender: nil)
        }
...
            guard status == 200
            else
            {
                print(status)
                DispatchQueue.main.async {
                    self.hideIndicator()
                    self.showAlert(title: "Try Again", message: "Invalid credentials")
                }
                return
                
            }
            if let Data = data{
                DispatchQueue.main.async {
...
